Compiladores/grammar/Mini2DLangParser.py
# Generated from Mini2DLangParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Mini2DLangParser ( Parser ):

    grammarFileName = "Mini2DLangParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sprite'", "'at'", "'move'", "'jump'", 
                     "'run'", "'crouch'", "'stop'", "'set_animation'", "'if'", 
                     "'else'", "'loop'", "'set'", "'gravity'", "'world_width'", 
                     "'world_height'", "'player_speed'", "'('", "')'", "'{'", 
                     "'}'", "','", "'.'", "'='", "';'", "'=='", "'!='", 
                     "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "SPRITE", "AT", "MOVE", "JUMP", "RUN", 
                      "CROUCH", "STOP", "SET_ANIMATION", "IF", "ELSE", "LOOP", 
                      "SET", "GRAVITY", "WORLD_WIDTH", "WORLD_HEIGHT", "PLAYER_SPEED", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "COMMA", "DOT", 
                      "ASSIGN", "SEMICOLON", "EQ", "NEQ", "LT", "GT", "LTE", 
                      "GTE", "PLUS", "MINUS", "MULT", "DIV", "NUMBER", "STRING", 
                      "IDENTIFIER", "COMMENT", "BLOCK_COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_spriteDeclaration = 2
    RULE_environmentSetting = 3
    RULE_action = 4
    RULE_controlFlow = 5
    RULE_ifStatement = 6
    RULE_loopStatement = 7
    RULE_condition = 8
    RULE_comparator = 9
    RULE_expr = 10

    ruleNames =  [ "program", "statement", "spriteDeclaration", "environmentSetting", 
                   "action", "controlFlow", "ifStatement", "loopStatement", 
                   "condition", "comparator", "expr" ]

    EOF = Token.EOF
    SPRITE=1
    AT=2
    MOVE=3
    JUMP=4
    RUN=5
    CROUCH=6
    STOP=7
    SET_ANIMATION=8
    IF=9
    ELSE=10
    LOOP=11
    SET=12
    GRAVITY=13
    WORLD_WIDTH=14
    WORLD_HEIGHT=15
    PLAYER_SPEED=16
    LPAREN=17
    RPAREN=18
    LBRACE=19
    RBRACE=20
    COMMA=21
    DOT=22
    ASSIGN=23
    SEMICOLON=24
    EQ=25
    NEQ=26
    LT=27
    GT=28
    LTE=29
    GTE=30
    PLUS=31
    MINUS=32
    MULT=33
    DIV=34
    NUMBER=35
    STRING=36
    IDENTIFIER=37
    COMMENT=38
    BLOCK_COMMENT=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Mini2DLangParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.StatementContext,i)


        def getRuleIndex(self):
            return Mini2DLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = Mini2DLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137438960130) != 0):
                self.state = 22
                self.statement()
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 28
            self.match(Mini2DLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def spriteDeclaration(self):
            return self.getTypedRuleContext(Mini2DLangParser.SpriteDeclarationContext,0)


        def environmentSetting(self):
            return self.getTypedRuleContext(Mini2DLangParser.EnvironmentSettingContext,0)


        def action(self):
            return self.getTypedRuleContext(Mini2DLangParser.ActionContext,0)


        def controlFlow(self):
            return self.getTypedRuleContext(Mini2DLangParser.ControlFlowContext,0)


        def getRuleIndex(self):
            return Mini2DLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Mini2DLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 30
                self.spriteDeclaration()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 31
                self.environmentSetting()
                pass
            elif token in [37]:
                self.enterOuterAlt(localctx, 3)
                self.state = 32
                self.action()
                pass
            elif token in [9, 11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 33
                self.controlFlow()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpriteDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SPRITE(self):
            return self.getToken(Mini2DLangParser.SPRITE, 0)

        def IDENTIFIER(self):
            return self.getToken(Mini2DLangParser.IDENTIFIER, 0)

        def AT(self):
            return self.getToken(Mini2DLangParser.AT, 0)

        def LPAREN(self):
            return self.getToken(Mini2DLangParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(Mini2DLangParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(Mini2DLangParser.RPAREN, 0)

        def getRuleIndex(self):
            return Mini2DLangParser.RULE_spriteDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpriteDeclaration" ):
                listener.enterSpriteDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpriteDeclaration" ):
                listener.exitSpriteDeclaration(self)




    def spriteDeclaration(self):

        localctx = Mini2DLangParser.SpriteDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spriteDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(Mini2DLangParser.SPRITE)
            self.state = 37
            self.match(Mini2DLangParser.IDENTIFIER)
            self.state = 38
            self.match(Mini2DLangParser.AT)
            self.state = 39
            self.match(Mini2DLangParser.LPAREN)
            self.state = 40
            self.expr(0)
            self.state = 41
            self.match(Mini2DLangParser.COMMA)
            self.state = 42
            self.expr(0)
            self.state = 43
            self.match(Mini2DLangParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EnvironmentSettingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SET(self):
            return self.getToken(Mini2DLangParser.SET, 0)

        def GRAVITY(self):
            return self.getToken(Mini2DLangParser.GRAVITY, 0)

        def ASSIGN(self):
            return self.getToken(Mini2DLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(Mini2DLangParser.ExprContext,0)


        def WORLD_WIDTH(self):
            return self.getToken(Mini2DLangParser.WORLD_WIDTH, 0)

        def WORLD_HEIGHT(self):
            return self.getToken(Mini2DLangParser.WORLD_HEIGHT, 0)

        def PLAYER_SPEED(self):
            return self.getToken(Mini2DLangParser.PLAYER_SPEED, 0)

        def getRuleIndex(self):
            return Mini2DLangParser.RULE_environmentSetting

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnvironmentSetting" ):
                listener.enterEnvironmentSetting(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnvironmentSetting" ):
                listener.exitEnvironmentSetting(self)




    def environmentSetting(self):

        localctx = Mini2DLangParser.EnvironmentSettingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_environmentSetting)
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(Mini2DLangParser.SET)
                self.state = 46
                self.match(Mini2DLangParser.GRAVITY)
                self.state = 47
                self.match(Mini2DLangParser.ASSIGN)
                self.state = 48
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.match(Mini2DLangParser.SET)
                self.state = 50
                self.match(Mini2DLangParser.WORLD_WIDTH)
                self.state = 51
                self.match(Mini2DLangParser.ASSIGN)
                self.state = 52
                self.expr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 53
                self.match(Mini2DLangParser.SET)
                self.state = 54
                self.match(Mini2DLangParser.WORLD_HEIGHT)
                self.state = 55
                self.match(Mini2DLangParser.ASSIGN)
                self.state = 56
                self.expr(0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(Mini2DLangParser.SET)
                self.state = 58
                self.match(Mini2DLangParser.PLAYER_SPEED)
                self.state = 59
                self.match(Mini2DLangParser.ASSIGN)
                self.state = 60
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(Mini2DLangParser.IDENTIFIER, 0)

        def DOT(self):
            return self.getToken(Mini2DLangParser.DOT, 0)

        def MOVE(self):
            return self.getToken(Mini2DLangParser.MOVE, 0)

        def LPAREN(self):
            return self.getToken(Mini2DLangParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.ExprContext,i)


        def COMMA(self):
            return self.getToken(Mini2DLangParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(Mini2DLangParser.RPAREN, 0)

        def JUMP(self):
            return self.getToken(Mini2DLangParser.JUMP, 0)

        def RUN(self):
            return self.getToken(Mini2DLangParser.RUN, 0)

        def CROUCH(self):
            return self.getToken(Mini2DLangParser.CROUCH, 0)

        def STOP(self):
            return self.getToken(Mini2DLangParser.STOP, 0)

        def SET_ANIMATION(self):
            return self.getToken(Mini2DLangParser.SET_ANIMATION, 0)

        def STRING(self):
            return self.getToken(Mini2DLangParser.STRING, 0)

        def getRuleIndex(self):
            return Mini2DLangParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = Mini2DLangParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_action)
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(Mini2DLangParser.IDENTIFIER)
                self.state = 64
                self.match(Mini2DLangParser.DOT)
                self.state = 65
                self.match(Mini2DLangParser.MOVE)
                self.state = 66
                self.match(Mini2DLangParser.LPAREN)
                self.state = 67
                self.expr(0)
                self.state = 68
                self.match(Mini2DLangParser.COMMA)
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(Mini2DLangParser.RPAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.match(Mini2DLangParser.IDENTIFIER)
                self.state = 73
                self.match(Mini2DLangParser.DOT)
                self.state = 74
                self.match(Mini2DLangParser.JUMP)
                self.state = 75
                self.match(Mini2DLangParser.LPAREN)
                self.state = 76
                self.match(Mini2DLangParser.RPAREN)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.match(Mini2DLangParser.IDENTIFIER)
                self.state = 78
                self.match(Mini2DLangParser.DOT)
                self.state = 79
                self.match(Mini2DLangParser.RUN)
                self.state = 80
                self.match(Mini2DLangParser.LPAREN)
                self.state = 81
                self.expr(0)
                self.state = 82
                self.match(Mini2DLangParser.RPAREN)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.match(Mini2DLangParser.IDENTIFIER)
                self.state = 85
                self.match(Mini2DLangParser.DOT)
                self.state = 86
                self.match(Mini2DLangParser.CROUCH)
                self.state = 87
                self.match(Mini2DLangParser.LPAREN)
                self.state = 88
                self.match(Mini2DLangParser.RPAREN)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.match(Mini2DLangParser.IDENTIFIER)
                self.state = 90
                self.match(Mini2DLangParser.DOT)
                self.state = 91
                self.match(Mini2DLangParser.STOP)
                self.state = 92
                self.match(Mini2DLangParser.LPAREN)
                self.state = 93
                self.match(Mini2DLangParser.RPAREN)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 94
                self.match(Mini2DLangParser.IDENTIFIER)
                self.state = 95
                self.match(Mini2DLangParser.DOT)
                self.state = 96
                self.match(Mini2DLangParser.SET_ANIMATION)
                self.state = 97
                self.match(Mini2DLangParser.LPAREN)
                self.state = 98
                self.match(Mini2DLangParser.STRING)
                self.state = 99
                self.match(Mini2DLangParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ControlFlowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifStatement(self):
            return self.getTypedRuleContext(Mini2DLangParser.IfStatementContext,0)


        def loopStatement(self):
            return self.getTypedRuleContext(Mini2DLangParser.LoopStatementContext,0)


        def getRuleIndex(self):
            return Mini2DLangParser.RULE_controlFlow

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControlFlow" ):
                listener.enterControlFlow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControlFlow" ):
                listener.exitControlFlow(self)




    def controlFlow(self):

        localctx = Mini2DLangParser.ControlFlowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_controlFlow)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.ifStatement()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.loopStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(Mini2DLangParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(Mini2DLangParser.ConditionContext,0)


        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(Mini2DLangParser.LBRACE)
            else:
                return self.getToken(Mini2DLangParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(Mini2DLangParser.RBRACE)
            else:
                return self.getToken(Mini2DLangParser.RBRACE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(Mini2DLangParser.ELSE, 0)

        def getRuleIndex(self):
            return Mini2DLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = Mini2DLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(Mini2DLangParser.IF)
            self.state = 107
            self.condition()
            self.state = 108
            self.match(Mini2DLangParser.LBRACE)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137438960130) != 0):
                self.state = 109
                self.statement()
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(Mini2DLangParser.RBRACE)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 116
                self.match(Mini2DLangParser.ELSE)
                self.state = 117
                self.match(Mini2DLangParser.LBRACE)
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137438960130) != 0):
                    self.state = 118
                    self.statement()
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 124
                self.match(Mini2DLangParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOOP(self):
            return self.getToken(Mini2DLangParser.LOOP, 0)

        def expr(self):
            return self.getTypedRuleContext(Mini2DLangParser.ExprContext,0)


        def LBRACE(self):
            return self.getToken(Mini2DLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(Mini2DLangParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.StatementContext,i)


        def getRuleIndex(self):
            return Mini2DLangParser.RULE_loopStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoopStatement" ):
                listener.enterLoopStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoopStatement" ):
                listener.exitLoopStatement(self)




    def loopStatement(self):

        localctx = Mini2DLangParser.LoopStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_loopStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(Mini2DLangParser.LOOP)
            self.state = 128
            self.expr(0)
            self.state = 129
            self.match(Mini2DLangParser.LBRACE)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 137438960130) != 0):
                self.state = 130
                self.statement()
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self.match(Mini2DLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.ExprContext,i)


        def comparator(self):
            return self.getTypedRuleContext(Mini2DLangParser.ComparatorContext,0)


        def getRuleIndex(self):
            return Mini2DLangParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = Mini2DLangParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condition)
        try:
            self.state = 143
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.expr(0)
                self.state = 139
                self.comparator()
                self.state = 140
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComparatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQ(self):
            return self.getToken(Mini2DLangParser.EQ, 0)

        def NEQ(self):
            return self.getToken(Mini2DLangParser.NEQ, 0)

        def LT(self):
            return self.getToken(Mini2DLangParser.LT, 0)

        def GT(self):
            return self.getToken(Mini2DLangParser.GT, 0)

        def LTE(self):
            return self.getToken(Mini2DLangParser.LTE, 0)

        def GTE(self):
            return self.getToken(Mini2DLangParser.GTE, 0)

        def getRuleIndex(self):
            return Mini2DLangParser.RULE_comparator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparator" ):
                listener.enterComparator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparator" ):
                listener.exitComparator(self)




    def comparator(self):

        localctx = Mini2DLangParser.ComparatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comparator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 2113929216) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return Mini2DLangParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class IdentifierContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mini2DLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENTIFIER(self):
            return self.getToken(Mini2DLangParser.IDENTIFIER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)


    class NumberContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mini2DLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(Mini2DLangParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)


    class MulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mini2DLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.ExprContext,i)

        def MULT(self):
            return self.getToken(Mini2DLangParser.MULT, 0)
        def DIV(self):
            return self.getToken(Mini2DLangParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mini2DLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini2DLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(Mini2DLangParser.ExprContext,i)

        def PLUS(self):
            return self.getToken(Mini2DLangParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(Mini2DLangParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a Mini2DLangParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(Mini2DLangParser.LPAREN, 0)
        def expr(self):
            return self.getTypedRuleContext(Mini2DLangParser.ExprContext,0)

        def RPAREN(self):
            return self.getToken(Mini2DLangParser.RPAREN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Mini2DLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [35]:
                localctx = Mini2DLangParser.NumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 148
                self.match(Mini2DLangParser.NUMBER)
                pass
            elif token in [37]:
                localctx = Mini2DLangParser.IdentifierContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 149
                self.match(Mini2DLangParser.IDENTIFIER)
                pass
            elif token in [17]:
                localctx = Mini2DLangParser.ParensContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 150
                self.match(Mini2DLangParser.LPAREN)
                self.state = 151
                self.expr(0)
                self.state = 152
                self.match(Mini2DLangParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)
